force-app/main/default/objects/Case/fields/CRM_User__c.field-meta.xml
<CustomField>
    <fullName>CRM_User__c</fullName>
    <label>CRM User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>