force-app/main/default/objects/Case/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>