force-app/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>IF(
    ISBLANK(ClosedDate),
    &quot;Case is not closed&quot;,
    TEXT(FLOOR((ClosedDate - CreatedDate) * 24)) &amp; &quot; hours &quot; &amp;
    TEXT(FLOOR(MOD((ClosedDate - CreatedDate) * 24, 1) * 60)) &amp; &quot; minutes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time</label>
    <type>Text</type>
</CustomField>