force-app/main/default/objects/Case/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>