force-app/main/default/objects/Case/recordTypes/Home_Loan.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan</fullName>
    <active>true</active>
    <businessProcess>Home Loan</businessProcess>
    <label>Home Loan</label>
</RecordType>